try select2 mutli row functionality

--- a/portality/templates/leaps/survey/survey.html
+++ b/portality/templates/leaps/survey/survey.html
@@ -6,8 +6,8 @@
 <script type="text/javascript" src="/static/bootstrap3/bootstrap.min.js"></script>
 
 <style>
-    .select2-container {
-        height:50px;
+    .select2-choice {
+        height:40px;
     }    
 </style>
 
