--- a/portality/templates/leaps/survey/survey.html
+++ b/portality/templates/leaps/survey/survey.html
@@ -5,12 +5,6 @@
 <link rel="stylesheet" type="text/css" media="all" href="/static/bootstrap3/bootstrap.min.css" />
 <script type="text/javascript" src="/static/bootstrap3/bootstrap.min.js"></script>
 
-<style>
-    .select2-choice {
-        height:40px;
-    }    
-</style>
-
 <script>
 jQuery(document).ready(function() {    
 
@@ -47,7 +41,7 @@ jQuery(document).ready(function() {
     }
     $('.checkdob').bind('change',dobformat);
     
-    $('.select2this').select2({width:'100%'});
+    $('.select2this').select2({width:'100%',height:'40px'});
     
     // hide survey sections and add prev/next nav-throughs
     var doprevnext = function(event) {
@@ -89,7 +83,7 @@ jQuery(document).ready(function() {
 	    for ( var i = 0; i < subjects.length; i++ ) {
 	        stext += '<option>' + subjects[i] + '</option>';
 	    };
-        $(row).find('.select2this').select2('destroy').select2({width:'100%'});
+        $(row).find('.select2this').select2('destroy').select2({width:'100%',height:'40px'});
         $(row).find('.subjectselector').html(stext);
         $(row).find('.institutionselector').unbind('change',limitsubjects).bind('change',limitsubjects);
         $(row).find('.subjectselector').unbind('change',limitlevels).bind('change',limitlevels);
@@ -188,7 +182,7 @@ jQuery(document).ready(function() {
             ls.html(lopts);
         }
         ls.removeAttr("disabled");
-        if (ls.hasClass('select2this')) ls.select2({width:'100%'});
+        if (ls.hasClass('select2this')) ls.select2({width:'100%',height:'40px'});
     }
     var limitsubjects = function(event) {
         var institution = $(this).val();
@@ -243,7 +237,7 @@ jQuery(document).ready(function() {
                     }
                     this.obj.closest('tr').find('.subjectselector').each(function() {
                         $(this).html(opts).removeAttr("disabled");
-                        if ($(this).hasClass('select2this')) $(this).select2({width:'100%'});
+                        if ($(this).hasClass('select2this')) $(this).select2({width:'100%',height:'40px'});
                     });
                 }
             });
