--- a/portality/templates/leaps/survey/survey.html
+++ b/portality/templates/leaps/survey/survey.html
@@ -71,7 +71,8 @@ jQuery(document).ready(function() {
 
     // function of things to do whenever a row is appended
     var preprow = function(row) {
-        $(row).find('.select2this').select2('destroy').removeAttr('id');
+        $(row).find('.select2this').select2('destroy');
+        $(row).find('.select2this').removeAttr('id');
         $(row).find('.delete-row').bind('click',deleterow);
         $(row).find('select').val("");
         $(row).find('input').val("");
@@ -117,8 +118,8 @@ jQuery(document).ready(function() {
                     }
                 });
                 $(this).closest('.row').append('<hr class="visible-xs visible-sm" style="border-color:#bbb;"></hr>');
-                $(row).insertAfter($(this).closest('.row'));
                 preprow(row);
+                $(row).insertAfter($(this).closest('.row'));
                 $(this).closest('.row').find('.add-row').parent().hide();
                 $(this).closest('.row').find('.delete-row').parent().show();
             }
