try select2 mutli row functionality

--- a/portality/templates/leaps/survey/survey.html
+++ b/portality/templates/leaps/survey/survey.html
@@ -41,7 +41,7 @@ jQuery(document).ready(function() {
     }
     $('.checkdob').bind('change',dobformat);
     
-    $('.select2this').select2({containerCssClass:'form-control'});
+    $('.select2this').select2({width:'100%',containerCss:'height:50px;'});
     
     // hide survey sections and add prev/next nav-throughs
     var doprevnext = function(event) {
