changes to policies and try new select2 update

--- a/portality/templates/account/policy.html
+++ b/portality/templates/account/policy.html
@@ -8,9 +8,9 @@
 
 <div class="row-fluid">
     <div class="span12">
-        <h1>In order to use this online system, you must first agree to our terms of use and data protection policy.</h1>
+        <h1>In order to use this online system, you must first agree to our terms of use and privacy policy.</h1>
 
-        <p>LEAPS Survey Database - Schools &amp; Universities Access Policy</p>
+        <p>LEAPS Survey Database - LEAPS staff, Schools, &amp; Universities Access Policy</p>
  
         <p>I acknowledge that I am responsible for the security, privacy and control of the confidential data in my possession as 
           taken from the leapssurvey.org database.</p>
@@ -29,11 +29,14 @@
         <li>To securely log-out of leapssurvey.org database each time I use it.</li>
         </ul>
  
-        <p>If you would like further information regarding our data protection policy, please contact LEAPS at 
-          <a href="mailto:leaps@ed.ac.uk">leaps@ed.ac.uk</a> or on 0131 650 4676.</p>
+        <p>Note that logging in to this system will set a cookie on your internet browser. This cookie is a purely functional cookie, 
+        used only to track your login status so that you do not need to login again on every page load. It does not collect or contain 
+        personal information about you, and no part of the cookie or system shares any of your data with any third party system.</p>
+        
+        <p>If you would like further information regarding our privacy policy, please <a href="/policy">see here</a>.</p>
 
         <form method="POST" action="">
-            <input class="btn" type="submit" name="submit" value="I agree to the LEAPS terms of use and data protection policy">
+            <input class="btn" type="submit" name="submit" value="I agree to the LEAPS terms of use and privacy policy">
         </form>
     </div>
 </div>
