--- a/portality/templates/leaps/policy.html
+++ b/portality/templates/leaps/policy.html
@@ -17,7 +17,7 @@
         schools throughout South East Scotland, supporting pupils who match
         <a href="http://www.leapsonline.org/node/1081">LEAPS eligibility criteria</a>. LEAPS is also
         supported by Skills Development Scotland and delivers the Scottish Funding Council's 
-        <a href="http://www.sfc.ac.uk/Priorities/Access/SHEP/SchoolsforHigherEducationProgramme.aspx">Schools for Higher Education
+        <a href="http://www.sfc.ac.uk/access-inclusion/access-initiatives/access-initiatives.aspx">Schools for Higher Education
         Programme</a> (SHEP) in South East Scotland. LEAPS is hosted by the University of Edinburgh.</p>
 
         <h2>Information about you: how we use it and with whom we share it</h2>
@@ -31,6 +31,8 @@
 Higher Education.</li>
             <li>To inform you of information, activities and events that may support your interest in and transition to
 Further and Higher Education.</li>
+            <li>To inform Further and Higher Education Institutions in the UK and abroad of your engagement in the LEAPS
+programme.</li>
             <li>To undertake research, analysis and reporting to support the ongoing evaluation and development of the
 LEAPS programme.</li>
         </ul>
@@ -54,6 +56,8 @@ LEAPS programme.</li>
         <ul>
             <li>Your school.</li>
             <li>Further and Higher Education Institutions in the UK and abroad.</li>
+            <li>Organisations involved in co-delivering LEAPS events. (These organisations will be outlined when you register
+for LEAPS events, or as soon as possible thereafter).</li>
             <li>Skills Development Scotland.</li>
         </ul>
 
@@ -71,3 +75,4 @@ LEAPS programme.</li>
 </div>
 
 {% endblock %}
+
