--- a/portality/templates/head.html
+++ b/portality/templates/head.html
@@ -39,8 +39,8 @@
     <!-- get select2 -->
     <!--<link rel="stylesheet" type="text/css" href="/static/portality/vendor/select2-release-3.2/select2.css">
     <script type="text/javascript" src="/static/portality/vendor/select2-release-3.2/select2.min.js"></script>-->
-    <link rel="stylesheet" type="text/css" href="/static/select2-3.5/select2.min.css">
-    <script type="text/javascript" src="/static/select2-3.5/select2.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="/static/select2-3.5/css/select2.min.css">
+    <script type="text/javascript" src="/static/select2-3.5/js/select2.min.js"></script>
 
     <!-- get our js and css -->
     <link rel="stylesheet" type="text/css" href="/static/css/leaps.css">
