--- a/portality/templates/leaps/survey/survey.html
+++ b/portality/templates/leaps/survey/survey.html
@@ -294,7 +294,7 @@ hr {
 textarea {
     min-height:150px;
 }
-.select2-container {
+.select2-container > .selection {
     height:60px;
 }
 /*.add-row, .delete-row {
