--- a/portality/templates/leaps/survey/survey.html
+++ b/portality/templates/leaps/survey/survey.html
@@ -42,7 +42,7 @@ jQuery(document).ready(function() {
     $('.checkdob').bind('change',dobformat);
     
     $('.select2this').select2({width:'100%'});
-    $('.select2thisRequired').siblings('.select2-container').find('.select2-selection').each(function() { $(this).css({'background-color':'red'}) });
+    $('.select2thisRequired').siblings('.select2-container').find('.select2-selection').each(function() { $(this).addClass('parsley-error') });
 
     // hide survey sections and add prev/next nav-throughs
     var doprevnext = function(event) {
@@ -295,7 +295,7 @@ textarea {
     min-height:150px;
 }
 .select2-container > .selection > .select2-selection {
-    height:40px;
+    height:30px;
 }
 /*.add-row, .delete-row {
     padding-left:3px;
