--- a/portality/templates/leaps/survey/survey.html
+++ b/portality/templates/leaps/survey/survey.html
@@ -296,7 +296,8 @@ textarea {
     min-height:150px;
 }
 .select2-container > .selection > .select2-selection {
-    height:36px;
+    height:34px;
+    border-color:#ccc;
 }
 /*.add-row, .delete-row {
     padding-left:3px;
