--- a/portality/templates/leaps/survey/survey.html
+++ b/portality/templates/leaps/survey/survey.html
@@ -74,7 +74,17 @@ jQuery(document).ready(function() {
     // function of things to do whenever a row is appended
     var preprow = function(row) {
         $(row).find('.delete-row').bind('click',deleterow);
-        $(row).find('select').val("");
+        $(row).find('select').each(function() {
+            $(this).val("");
+            var opts = [];
+            $(this).find('option').each(function() {
+               opts.push({value:$(this).attr('value'),name:$(this).html()}); 
+            });
+            $(this).html("");
+            for ( var o in opts ) {
+                $(this).append('<option' + (opts[o].value !== undefined && opts[o].value.length ? ' value="' + opts[o].value + '"' : '') + '>' + opts[o].name + '</option>');
+            }
+        });
         $(row).find('input').val("");
         $(row).find('textarea').html("").val("");
         $(row).find('.datepicker').datepicker("destroy");
