fix pae leaps category and shep printout

--- a/portality/templates/leaps/universities/pae.html
+++ b/portality/templates/leaps/universities/pae.html
@@ -71,8 +71,8 @@ jQuery(document).ready(function() {
             <table class="table table-bordered">
                 <tr>
                     <td class="title">Date of birth</td> <td>{{ student.date_of_birth }}</td>
-                    <td class="title">Post code<br>SIMD %</td> <td>{{ student.post_code }}<br>{{ student.simd_pc }}</td>
-                    <td></td>
+                    <td class="title">Post code</td> <td>{{ student.post_code }}</td>
+                    <td class="title">SIMD %</td> <td>{{ student.simd_pc }}</td>
                 </tr>
                 <tr>
                     <td class="title">School</td> <td>{{ student.school }}</td>
