making every signing in user re-sign the user terms, and showing a link to it in the footer for any signed in user

--- a/portality/templates/footer.html
+++ b/portality/templates/footer.html
@@ -2,6 +2,7 @@
 		<p>Lothians Equal Access Programme for Schools &middot; Room 1/06 Old Moray House &middot; Holyrood Road &middot; Edinburgh &middot; EH8 8AQ</p>
 		<p>
 		<a href="/">LEAPS</a> | 
+		{% if current_user %}<a href="/account/policy">User Access Terms</a> | {% endif %}
 		<a href="/policy">Privacy policy</a> | 
 		<a href="/survey">Survey form</a> | 
 		<a href="/schools">Schools</a> | 
