--- a/portality/templates/account/policy.html
+++ b/portality/templates/account/policy.html
@@ -8,9 +8,9 @@
 
 <div class="row-fluid">
     <div class="span12">
-        <h1>In order to use this online system, you must first agree to our terms of use and privacy policy.</h1>
+        <h1>Please find below our User Access Terms</h1>
 
-        <p>LEAPS Survey Database - LEAPS staff, Schools, &amp; Universities Access Policy</p>
+        <p>LEAPS Survey Database - LEAPS staff, Schools &amp; Universities Access Policy</p>
  
         <p>I acknowledge that I am responsible for the security, privacy and control of the confidential data in my possession as 
           taken from the leapssurvey.org database.</p>
@@ -36,7 +36,7 @@
         <p>If you would like further information regarding our privacy policy, please <a href="/policy">see here</a>.</p>
 
         <form method="POST" action="">
-            <input class="btn" type="submit" name="submit" value="I agree to the LEAPS terms of use and privacy policy">
+            <input class="btn" type="submit" name="submit" value="I wish to proceed to the LEAPS survey database">
         </form>
     </div>
 </div>
