--- a/portality/templates/footer.html
+++ b/portality/templates/footer.html
@@ -9,7 +9,7 @@
 		<a href="/universities">Universities</a> | 
 		<a href="http://leapsonline.org">leapsonline.org</a> | 
 		<a href="mailto:leaps@ed.ac.uk">LEAPS@ed.ac.uk</a> | 
-		<a href="http://www.leapsonline.org/contact-us.html">Contact us</a> | 
+		<a href="http://www.leapsonline.org/contact-us">Contact us</a> | 
 		0131 650 4676
 		</p>
     </footer>
