--- a/portality/templates/leaps/policy.html
+++ b/portality/templates/leaps/policy.html
@@ -70,7 +70,7 @@ for LEAPS events, or as soon as possible thereafter).</li>
         Office at <a href="mailto:leaps@ed.ac.uk"></a>leaps@ed.ac.uk</a>.</p>
 
         <p>This privacy statement is continued at: 
-        <br><a href="https://www.edweb.ed.ac.uk/records-management/notice">Continued privacy notice</a></p>
+        <br><a href="https://www.ed.ac.uk/records-management/notice">Continued privacy notice</a></p>
     </div>
 </div>
 
